@@ -1,15 +1,19 @@
 package co.rsk.federate;
 
+import co.rsk.bitcoinj.core.BtcTransaction;
 import co.rsk.bitcoinj.core.Coin;
 import co.rsk.bitcoinj.core.Sha256Hash;
 import co.rsk.core.RskAddress;
 import co.rsk.crypto.Keccak256;
+import co.rsk.federate.signing.utils.TestUtils;
 import co.rsk.peg.BridgeEvents;
 import co.rsk.peg.pegin.RejectedPeginReason;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.ethereum.core.CallTransaction;
+import org.ethereum.crypto.ECKey;
 import org.ethereum.vm.DataWord;
 import org.ethereum.vm.LogInfo;
 import org.ethereum.vm.PrecompiledContracts;
@@ -19,42 +23,49 @@ public final class EventsTestUtils {
     private EventsTestUtils() {
     }
 
-    public static LogInfo createPegoutTransactionCreatedLog(Sha256Hash pegoutBtcTxHash,
-        byte[] serializedOutpointValues) {
+    public static LogInfo createPegoutTransactionCreatedLog(
+        Sha256Hash pegoutBtcTxHash,
+        byte[] serializedOutpointValues
+    ) {
         CallTransaction.Function pegoutTransactionCreatedEvent = BridgeEvents.PEGOUT_TRANSACTION_CREATED.getEvent();
         byte[] pegoutTransactionCreatedSignatureTopic = pegoutTransactionCreatedEvent.encodeSignatureLong();
         List<DataWord> topics = new ArrayList<>();
-        topics.add(
-            DataWord.valueOf(pegoutTransactionCreatedSignatureTopic));
+        topics.add(DataWord.valueOf(pegoutTransactionCreatedSignatureTopic));
         topics.add(DataWord.valueOf(pegoutBtcTxHash.getBytes()));
 
-        byte[] pegoutTransactionCreatedEncodedData = pegoutTransactionCreatedEvent.encodeEventData(
-            serializedOutpointValues);
+        byte[] pegoutTransactionCreatedEncodedData = pegoutTransactionCreatedEvent.encodeEventData(serializedOutpointValues);
 
         return new LogInfo(
             PrecompiledContracts.BRIDGE_ADDR.getBytes(),
-            topics, pegoutTransactionCreatedEncodedData);
+            topics,
+            pegoutTransactionCreatedEncodedData
+        );
     }
 
-    public static LogInfo createBatchPegoutCreatedLog(Sha256Hash pegoutBtcTxHash,
-        List<Keccak256> pegoutRequestRskTxHashes) {
+    public static LogInfo createBatchPegoutCreatedLog(
+        Sha256Hash pegoutBtcTxHash,
+        List<Keccak256> pegoutRequestRskTxHashes
+    ) {
         CallTransaction.Function batchPegoutCreatedEvent = BridgeEvents.BATCH_PEGOUT_CREATED.getEvent();
         byte[] batchPegoutEventSignatureTopic = batchPegoutCreatedEvent.encodeSignatureLong();
         List<DataWord> topics = new ArrayList<>();
-        topics.add(
-            DataWord.valueOf(batchPegoutEventSignatureTopic));
+        topics.add(DataWord.valueOf(batchPegoutEventSignatureTopic));
         topics.add(DataWord.valueOf(pegoutBtcTxHash.getBytes()));
 
-        byte[] encodedData = batchPegoutCreatedEvent.encodeEventData(
-            serializeRskTxHashes(pegoutRequestRskTxHashes));
+        byte[] encodedData = batchPegoutCreatedEvent.encodeEventData(serializeRskTxHashes(pegoutRequestRskTxHashes));
 
-        return new LogInfo(PrecompiledContracts.BRIDGE_ADDR.getBytes(),
-            topics, encodedData);
+        return new LogInfo(
+            PrecompiledContracts.BRIDGE_ADDR.getBytes(),
+            topics,
+            encodedData
+        );
     }
 
-    public static LogInfo createReleaseRequestedLog(Keccak256 pegoutRskTxHash,
+    public static LogInfo createReleaseRequestedLog(
+        Keccak256 pegoutRskTxHash,
         Sha256Hash pegoutBtcTxHash,
-        Coin amount) {
+        Coin amount
+    ) {
         CallTransaction.Function releaseRequestedEvent = BridgeEvents.RELEASE_REQUESTED.getEvent();
 
         byte[] releaseRequestedSignatureTopic = releaseRequestedEvent.encodeSignatureLong();
@@ -65,8 +76,10 @@ public final class EventsTestUtils {
 
         byte[] encodedData = releaseRequestedEvent.encodeEventData(amount.getValue());
 
-        return new LogInfo(PrecompiledContracts.BRIDGE_ADDR.getBytes(),
-            topics, encodedData);
+        return new LogInfo(
+            PrecompiledContracts.BRIDGE_ADDR.getBytes(),
+            topics, encodedData
+        );
     }
 
     public static LogInfo createUpdateCollectionsLog(RskAddress senderAddress) {
@@ -78,11 +91,14 @@ public final class EventsTestUtils {
 
         byte[] encodedData = updateCollectionsEvent.encodeEventData(senderAddress.toString());
 
-        return new LogInfo(PrecompiledContracts.BRIDGE_ADDR.getBytes(),
-            topics, encodedData);
+        return new LogInfo(
+            PrecompiledContracts.BRIDGE_ADDR.getBytes(),
+            topics,
+            encodedData
+        );
     }
 
-    public static LogInfo creatRejectedPeginLog(Sha256Hash pegoutBtcTxHash, RejectedPeginReason reason) {
+    public static LogInfo createRejectedPeginLog(Sha256Hash pegoutBtcTxHash, RejectedPeginReason reason) {
         CallTransaction.Function rejectedPeginEvent = BridgeEvents.REJECTED_PEGIN.getEvent();
 
         byte[] rejectedPeginSignatureTopic = rejectedPeginEvent.encodeSignatureLong();
@@ -96,13 +112,54 @@ public final class EventsTestUtils {
             topics, encodedData);
     }
 
+    public static List<LogInfo> createCommonPegoutLogs(
+        Keccak256 pegoutCreationRskTxHash,
+        BtcTransaction pegoutBtcTx,
+        byte[] serializedOutpointValues
+    ) {
+        List<LogInfo> logs = new ArrayList<>();
+
+        // update_collections
+        ECKey senderKey = TestUtils.getEcKeyFromSeed("senderKey");
+        RskAddress senderAddress = new RskAddress(senderKey.getAddress());
+        LogInfo updateCollectionsLog = createUpdateCollectionsLog(senderAddress);
+        logs.add(updateCollectionsLog);
+
+        // release_requested
+        Coin pegoutAmount = Coin.COIN;
+        LogInfo releaseRequestedLog = createReleaseRequestedLog(
+            pegoutCreationRskTxHash,
+            pegoutBtcTx.getHash(),
+            pegoutAmount
+        );
+        logs.add(releaseRequestedLog);
+
+        // batch_pegout_created
+        Keccak256 pegoutRequestRskTxHash = TestUtils.createHash(10);
+        List<Keccak256> pegoutRequestRskTxHashes = Collections.singletonList(pegoutRequestRskTxHash);
+        LogInfo batchPegoutCreatedLog = createBatchPegoutCreatedLog(
+            pegoutBtcTx.getHash(),
+            pegoutRequestRskTxHashes
+        );
+        logs.add(batchPegoutCreatedLog);
+
+        // pegout_transaction_created
+        LogInfo pegoutTransactionCreatedLog = createPegoutTransactionCreatedLog(
+            pegoutBtcTx.getHash(),
+            serializedOutpointValues
+        );
+        logs.add(pegoutTransactionCreatedLog);
+
+        return logs;
+    }
+
     /*
     TODO: Remove this method once {@link co.rsk.peg.utils.BridgeEventLoggerImpl#serializeRskTxHashes(List<Keccak256> rskTxHashes)} is moved to a util class
      */
     private static byte[] serializeRskTxHashes(List<Keccak256> rskTxHashes) {
         List<byte[]> rskTxHashesList = rskTxHashes.stream()
             .map(Keccak256::getBytes)
-            .collect(Collectors.toList());
+            .toList();
         int rskTxHashesLength = rskTxHashesList.stream().mapToInt(key -> key.length).sum();
 
         byte[] serializedRskTxHashes = new byte[rskTxHashesLength];
